@@ -22,6 +22,8 @@ VkFormat GetVulkanFormat(UHTextureFormat InUHFormat)
 		FormatCache[UH_FORMAT_RG16F] = VK_FORMAT_R16G16_SFLOAT;
 		FormatCache[UH_FORMAT_R8_UNORM] = VK_FORMAT_R8_UNORM;
 		FormatCache[UH_FORMAT_R16F] = VK_FORMAT_R16_SFLOAT;
+		FormatCache[UH_FORMAT_R16_UNORM] = VK_FORMAT_R16_UNORM;
+		FormatCache[UH_FORMAT_RG16_UNORM] = VK_FORMAT_R16G16_UNORM;
 
 		FormatCache[UH_FORMAT_BC1_UNORM] = VK_FORMAT_BC1_RGB_UNORM_BLOCK;
 		FormatCache[UH_FORMAT_BC1_SRGB] = VK_FORMAT_BC1_RGB_SRGB_BLOCK;
