@@ -20,7 +20,8 @@ Size=680,344
 Collapsed=0
 
 [Window][UHE Settings]
-Pos=150,56
+ViewportPos=1158,149
+ViewportId=0x30F54064
 Size=440,708
 Collapsed=0
 
