@@ -475,3 +475,5 @@ Moved all GPU time scope to the top of function, made it more sense.
 
 29-11-2023: Minor fix for resource barrier, I forgot clearing the list after calling flush resource barrier!
 Fixed async compute issue again by adding compute shader bit for the wait semaphore.
+01-12-2023: Minor improvements that includes using _UNORM for miprate instead, moving velocity calculation to vertex shader
+, and enhanced async compute again (start thinking it could be driver issue).
